feat: Update trigger properties - Add display name to trigger - Add Update status for triggers - Implement soft delete for triggers
